--- a/7.html
+++ b/7.html
@@ -1,7 +1,7 @@
 <body>
     <div id="root"></div>
-    <script src="https://unpkg.com/react@16.7.0/umd/react.development.min.js"></script>
-    <script src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.development.min.js"></script>
+    <script src="https://unpkg.com/react@16.7.0/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script src="https://unpkg.com/prop-types@15.6.1/prop-types.js"></script>
     <script type="text/babel">
